Result: to line 32

--- a/EasyCalc/templates/EasyCalc/index.html
+++ b/EasyCalc/templates/EasyCalc/index.html
@@ -29,7 +29,7 @@
     </form>
 
     {% if result %}
-        <p>{{ result }}</p>
+        <p>Result: {{ result }}</p>
     {% endif %}
 </body>
 </html>
