--- a/EasyCalc/templates/EasyCalc/index.html
+++ b/EasyCalc/templates/EasyCalc/index.html
@@ -6,7 +6,48 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Simple Calculator</h1>
+
+
+<!-- Calculator Body -->
+<div class="calc-body">
+
+    <!-- Calculator Display Screen -->
+<div class="calc-screen">
+    <div id="calc-operation">1234 + 567 + </div>
+    <div id="calc-typed">890</div>
+</div>
+    
+    <!-- Calculator Buttons -->
+<div class="calc-button-row">
+    <button class="ac">AC</button>
+    <button class="opt">&#43;&#47;&#8722;</button>
+    <button class="opt">&#37;</button>
+    <button class="opt">&#247;</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button class="opt">&#215;</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button class="opt">&#8722;</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button class="opt">&#43;</button>
+    <button>0</button>
+    <button>.</button>
+    <button>&#9003;</button>
+    <button class="opt">&#61;</button>
+</div>
+</div>
+
+
+
+
+
+
+    <!-- <h1>Simple Calculator</h1>
     <form method="post" action="{% url 'calculator' %}">
         {% csrf_token %}
         <label for="input1">Input 1:</label>
@@ -14,7 +55,7 @@
         
         <label for="operator">Operator:</label>
         <input name="operator" required>
-        
+
         <label for="input2">Input 2:</label>
         <input name="input2" required>
         
@@ -23,6 +64,6 @@
 
     {% if result %}
         <p>Result: {{ result }}</p>
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
