--- a/EasyCalc/templates/EasyCalc/index.html
+++ b/EasyCalc/templates/EasyCalc/index.html
@@ -1,9 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <title>Calculator</title>
+
+    <!-- <link href="{% static 'css/styles.css' %}" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
 
