--- a/EasyCalc/static/css/styles.css
+++ b/EasyCalc/static/css/styles.css
@@ -8,16 +8,16 @@ body {
 }
 
 .calculator {
-    border: 3px solid #070707;
+    border: 0.5px solid;
     border-radius: 8px;
     overflow: hidden;
     width: 300px;
 }
 
 .screen {
-    background-color: #7cd1f3;
-    padding: 7px;
-    font-size: 1.5em;
+    background-color: #425068;
+    padding: 40px;
+    font-size: 2rem;
     text-align: right;
 }
 
@@ -29,69 +29,12 @@ body {
 button {
     border: none;
     padding: 10px;
-    font-size: 1em;
+    font-size: 1.5em;
     cursor: pointer;
+    color: #ebedf0;
+    background-color: #3A4655;
 }
 
 button:hover {
-    background-color: #ddd;
+    background-color: #242930;
 }
-
-
-
-/* @charset "UTF-8";
-.calc-body {
-    width: 275px;
-    margin: auto;
-    min-height: 400px;
-    box-shadow: 0 8px 50px -7px black;
-    background: #3A4655;
-}
-Calculator Display Screen
-.calc-screen {
-    padding: 1rem;
-}
-#calc-operation {
-    font-size: 1.3rem;
-    text-align: right;
-    color: #727B86;
-    padding-bottom: .5rem;
-}
-#calc-typed {
-    font-size: 2rem;
-    text-align: right;
-    color: #fff;
-}
-Calculator Buttons
-.calc-button-row{
-    display: table;
-}
-.calc-button-row button {
-    display: table-cell;
-    width: 25%;
-    background: #425062;
-    color: #fff;
-    height: 65px;
-    font-size: 1.3rem;
-    border: none;
-    border-color:#3C4857;
-    border-width: 1px 1px 0px 0;
-    border-style: solid;
-}
-.calc-button-row button.ac {
-    color: #ff7665;
-}
-.calc-button-row button.opt {
-    color: #ffbc56;
-}
-The border has been managed in every fourth button so that the design will not distract.
-.calc-button-row button:nth-child(4n){
-    border-right: none;
-}
-.calc-button-row button:active {
-    position: relative;
-    top: 1px;
-}
-.calc-button-row button:hover {
-    background: #3e4b5c;
-} */
